# SideKick

./: README.md  install.txt  package-lock.json  package.json  spec.md  tailwind.config.js
Code/: Read.txt
scripts/: convert-icon.js
src/: App.tsx  constants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  clipboard.rs  config.rs  lib.rs  llm.rs  types.rs
src/components/: CommandPalette.tsx  Settings.tsx
