[package]
name = "sidekick"
version = "0.1.0"
description = "Desktop Sidekick"
authors = ["you"]
edition = "2021"

[lib]
name = "sidekick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
clipboard-win = "5"
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse"] }
window-vibrancy = "0.5"
tauri-plugin-clipboard-manager = "2.3.2"

